--- a/books_generator/backend/package.json
+++ b/books_generator/backend/package.json
@@ -14,6 +14,7 @@
   "type": "module",
   "dependencies": {
     "@faker-js/faker": "^9.9.0",
+    "canvas": "^3.1.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
